# Hyperlynx_backend

./: .env.example  .gitignore  .vercelignore  API_TESTING.md  ARCHITECTURE.md  CHECKLIST.md  COMPLETE.txt  CONFIGURATION.md  INDEX.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_FLASK.md  SETUP_GUIDE.txt  SETUP_SUMMARY.md  START_HERE.md  SUPABASE_SETUP.md  VERCEL_ENV_SETUP.md  application.py  create_library_tables.py  create_tables.py  direct_run.py  list_routes.py  load_libraries.py  manage.py  nixpacks.toml  pyproject.toml  quick_test.py  railway.json  render.yaml  requirements.txt  run.bat  run.py  run.sh  server_output.txt  test_app.py  test_db_connection.py  test_flask.py  test_import.py  test_library_api.py  (+3 more)
api/: index.py  urls.py  views.py
app/models/: __init__.py  framework.py  library.py  mapping.py  reference_control.py  risk_matrix.py  user.py
app/routes/: __init__.py  api.py  auth.py  controls_and_matrices.py  frameworks.py  loaded_libraries.py  mappings.py  stored_libraries.py
hyperlynx_backend/: asgi.py  settings.py  urls.py  wsgi.py
migrations/versions/: 3b561050477d_create_users_table.py
users/: serializers.py  urls.py  views.py
