[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperlynx-backend"
version = "1.0.0"
description = "Hyperlynx Backend API - Flask with SQLAlchemy and Supabase"
requires-python = ">=3.11"
authors = [
    {name = "Hyperlynx Team", email = "support@hyperlynx.com"}
]
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-CORS==4.0.0",
    "Flask-JWT-Extended==4.6.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.10",
    "PyYAML==6.0.1",
    "werkzeug==3.0.1",
    "flasgger==0.9.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[tool.setuptools]
packages = ["app"]
